[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "classwise_tda"
authors = [{"name"="Lander Ver Hoef"}]
description = "Classwise TDA Computations"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = ["numpy", "xarray", "gudhi", "scipy"]

[project.urls]
Repository = "https://github.com/zyjux/classwise_tda"

[tool.setuptools.dynamic]
version = {attr = "classwise_tda.__version__"}
